[gd_scene load_steps=36 format=3 uid="uid://obfkqco2xodm"]

[ext_resource type="Script" uid="uid://d0cvavmwr45e2" path="res://Player/player.gd" id="1_gwnis"]
[ext_resource type="Resource" uid="uid://fvq8xi66kxov" path="res://Player/MovementStates/stand.tres" id="2_vtle1"]
[ext_resource type="Script" uid="uid://bsp1f3vpcgvsx" path="res://Player/camera_controller.gd" id="3_0ipbm"]
[ext_resource type="Script" uid="uid://dbwpdvt46lvhx" path="res://Player/movement_controller.gd" id="3_cvn67"]
[ext_resource type="Resource" uid="uid://c0aaanr84ak8r" path="res://Player/MovementStates/walk.tres" id="3_od3ui"]
[ext_resource type="Resource" uid="uid://ilxft0txduu2" path="res://Player/MovementStates/run.tres" id="4_00tjw"]
[ext_resource type="Resource" uid="uid://orrjibpllpgs" path="res://Player/MovementStates/sprint.tres" id="5_od3ui"]
[ext_resource type="Resource" uid="uid://s4tjcrrseqcn" path="res://Player/JumpStates/ground_jump.tres" id="6_apopc"]
[ext_resource type="Script" uid="uid://kxh4dnwdgvuy" path="res://Player/animation_controller.gd" id="7_00tjw"]
[ext_resource type="Resource" uid="uid://c1ivhxsl0ari0" path="res://Player/JumpStates/air_jump.tres" id="7_5htga"]
[ext_resource type="PackedScene" uid="uid://c0hrabmf30gmc" path="res://Models/Scenes/animatedMonkeyMan.tscn" id="11_5htga"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1ygp"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o28un"]
animation = &"RightPunch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pisgm"]
animation = &"StartFighting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n471f"]
animation = &"LeftPunch"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_7emwf"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_apopc"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_hshwv"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_gpjlu"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_5htga"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_gu6f8"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_p5o4e"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_apopc"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_b1ygp"]
filter_enabled = true
filters = ["Armature/Skeleton3D:mixamorig_Head", "Armature/Skeleton3D:mixamorig_HeadTop_End", "Armature/Skeleton3D:mixamorig_LeftArm", "Armature/Skeleton3D:mixamorig_LeftForeArm", "Armature/Skeleton3D:mixamorig_LeftHand", "Armature/Skeleton3D:mixamorig_LeftHandIndex1", "Armature/Skeleton3D:mixamorig_LeftHandIndex2", "Armature/Skeleton3D:mixamorig_LeftHandIndex3", "Armature/Skeleton3D:mixamorig_LeftHandIndex4", "Armature/Skeleton3D:mixamorig_LeftHandThumb1", "Armature/Skeleton3D:mixamorig_LeftHandThumb2", "Armature/Skeleton3D:mixamorig_LeftHandThumb3", "Armature/Skeleton3D:mixamorig_LeftHandThumb4", "Armature/Skeleton3D:mixamorig_LeftShoulder", "Armature/Skeleton3D:mixamorig_Neck", "Armature/Skeleton3D:mixamorig_RightArm", "Armature/Skeleton3D:mixamorig_RightForeArm", "Armature/Skeleton3D:mixamorig_RightHand", "Armature/Skeleton3D:mixamorig_RightHandIndex1", "Armature/Skeleton3D:mixamorig_RightHandIndex2", "Armature/Skeleton3D:mixamorig_RightHandIndex3", "Armature/Skeleton3D:mixamorig_RightHandIndex4", "Armature/Skeleton3D:mixamorig_RightHandThumb1", "Armature/Skeleton3D:mixamorig_RightHandThumb2", "Armature/Skeleton3D:mixamorig_RightHandThumb3", "Armature/Skeleton3D:mixamorig_RightHandThumb4", "Armature/Skeleton3D:mixamorig_RightShoulder"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_apopc"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5htga"]
animation = &"Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p5o4e"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gu6f8"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkpta"]
animation = &"Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lfmf2"]
animation = &"Running"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_pisgm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_apopc")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_5htga")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_p5o4e")
blend_point_2/pos = 2.0
blend_point_3/node = SubResource("AnimationNodeAnimation_gu6f8")
blend_point_3/pos = 3.0
blend_point_4/node = SubResource("AnimationNodeAnimation_dkpta")
blend_point_4/pos = 3.0
blend_point_5/node = SubResource("AnimationNodeAnimation_lfmf2")
blend_point_5/pos = 3.0
min_space = 0.0
max_space = 3.0
snap = 1.0

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_o28un"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_gu6f8"]
graph_offset = Vector2(-78.2505, 92.0989)
nodes/Animation/node = SubResource("AnimationNodeAnimation_n471f")
nodes/Animation/position = Vector2(340, 600)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_b1ygp")
"nodes/Animation 2/position" = Vector2(1540, 0)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_o28un")
"nodes/Animation 3/position" = Vector2(780, 680)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_pisgm")
"nodes/Animation 4/position" = Vector2(100, 460)
nodes/Jump/node = SubResource("AnimationNodeOneShot_7emwf")
nodes/Jump/position = Vector2(1660, 360)
nodes/PunchLeft/node = SubResource("AnimationNodeOneShot_apopc")
nodes/PunchLeft/position = Vector2(760, 80)
nodes/PunchLeftOld/node = SubResource("AnimationNodeOneShot_hshwv")
nodes/PunchLeftOld/position = Vector2(1500, 620)
nodes/PunchRight/node = SubResource("AnimationNodeOneShot_gpjlu")
nodes/PunchRight/position = Vector2(1300, 240)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_p5o4e")
nodes/TimeScale/position = Vector2(1340, 660)
"nodes/TimeScale 2/node" = SubResource("AnimationNodeTimeScale_5htga")
"nodes/TimeScale 2/position" = Vector2(1060, 620)
"nodes/TimeScale 3/node" = SubResource("AnimationNodeTimeScale_gu6f8")
"nodes/TimeScale 3/position" = Vector2(560, 400)
nodes/TimeScale1/node = SubResource("AnimationNodeTimeScale_apopc")
nodes/TimeScale1/position = Vector2(-40, 200)
nodes/aiming_blend/node = SubResource("AnimationNodeBlend2_b1ygp")
nodes/aiming_blend/position = Vector2(320, 320)
nodes/blend_movement/node = SubResource("AnimationNodeBlendSpace1D_pisgm")
nodes/blend_movement/position = Vector2(-300, 220)
nodes/on_floor_blend/node = SubResource("AnimationNodeBlend2_o28un")
nodes/on_floor_blend/position = Vector2(1820, 20)
nodes/output/position = Vector2(2260, -20)
node_connections = [&"PunchLeft", 0, &"aiming_blend", &"PunchLeft", 1, &"TimeScale 3", &"PunchLeftOld", 1, &"TimeScale", &"PunchRight", 0, &"PunchLeft", &"PunchRight", 1, &"TimeScale 2", &"TimeScale 2", 0, &"Animation 3", &"TimeScale 3", 0, &"Animation", &"TimeScale1", 0, &"blend_movement", &"aiming_blend", 0, &"TimeScale1", &"aiming_blend", 1, &"Animation 4", &"on_floor_blend", 0, &"Animation 2", &"on_floor_blend", 1, &"PunchRight", &"output", 0, &"on_floor_blend"]

[sub_resource type="SphereShape3D" id="SphereShape3D_l5upd"]
radius = 0.07

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l5upd"]
radius = 0.2
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_gwnis")
movement_states = {
"run": ExtResource("4_00tjw"),
"sprint": ExtResource("5_od3ui"),
"stand": ExtResource("2_vtle1"),
"walk": ExtResource("3_od3ui")
}
jump_states = {
"air_jump": ExtResource("7_5htga"),
"ground_jump": ExtResource("6_apopc")
}

[node name="MovementController" type="Node" parent="." node_paths=PackedStringArray("player", "mesh_root")]
script = ExtResource("3_cvn67")
player = NodePath("..")
mesh_root = NodePath("../MeshRoot")

[node name="AnimationController" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "player")]
script = ExtResource("7_00tjw")
animation_tree = NodePath("../MeshRoot/AnimationTree")
player = NodePath("..")

[node name="MeshRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38419e-07, 0)

[node name="AnimationTree" type="AnimationTree" parent="MeshRoot"]
root_node = NodePath("../animated_monkey_man_trimmed")
tree_root = SubResource("AnimationNodeBlendTree_gu6f8")
anim_player = NodePath("../animated_monkey_man_trimmed/AnimationPlayer")
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/PunchLeft/active = false
parameters/PunchLeft/internal_active = false
parameters/PunchLeft/request = 0
parameters/PunchLeftOld/active = false
parameters/PunchLeftOld/internal_active = 1.06667
parameters/PunchLeftOld/request = 0
parameters/PunchRight/active = false
parameters/PunchRight/internal_active = false
parameters/PunchRight/request = 0
parameters/TimeScale/scale = 0.0
"parameters/TimeScale 2/scale" = 2.0
"parameters/TimeScale 3/scale" = 2.0
parameters/TimeScale1/scale = 1.0
parameters/aiming_blend/blend_amount = 0.0
parameters/blend_movement/blend_position = 0.1
parameters/on_floor_blend/blend_amount = 1.0

[node name="animated_monkey_man_trimmed" parent="MeshRoot" instance=ExtResource("11_5htga")]

[node name="Skeleton3D" parent="MeshRoot/animated_monkey_man_trimmed/Armature" index="0"]
bones/0/position = Vector3(-6.17735, 1.86036, -62.6668)
bones/0/rotation = Quaternion(-0.717309, 0.0268139, -0.0165911, 0.696041)
bones/1/position = Vector3(3.92087e-08, 6.99434, -0.580394)
bones/1/rotation = Quaternion(-0.0265147, -0.000818604, 0.00412249, 0.99964)
bones/2/position = Vector3(8.028e-08, 8.1881, 1.02501e-06)
bones/2/rotation = Quaternion(0.0199584, -0.0209923, 0.00632209, 0.99956)
bones/3/position = Vector3(-2.20258e-08, 9.35785, -6.19289e-07)
bones/3/rotation = Quaternion(0.0196929, -0.0208827, 0.00697161, 0.999564)
bones/4/position = Vector3(1.3141e-07, 10.5276, -6.92809e-07)
bones/4/rotation = Quaternion(0.0336805, 0.00693771, -0.0187533, 0.999233)
bones/5/position = Vector3(-3.35276e-08, 5.07295, 0.219623)
bones/5/rotation = Quaternion(0.0346942, -0.0344861, 0.0274041, 0.998427)
bones/6/position = Vector3(-5.69969e-08, 16.3962, 0.709842)
bones/7/position = Vector3(4.06175, 9.39171, -0.103784)
bones/7/rotation = Quaternion(-0.550588, -0.427183, 0.608349, -0.379841)
bones/8/position = Vector3(5.12946e-07, 8.45856, 5.54249e-06)
bones/8/rotation = Quaternion(0.480842, 0.140453, 0.115938, 0.857685)
bones/9/position = Vector3(-3.58994e-07, 20.6769, -2.27767e-05)
bones/9/rotation = Quaternion(-0.0220459, 0.00932632, 0.210978, 0.977198)
bones/10/position = Vector3(2.02804e-08, 17.9719, -5.74929e-06)
bones/10/rotation = Quaternion(0.107306, 0.077745, -0.0302261, 0.990721)
bones/11/position = Vector3(-2.41666, 3.34332, 1.76206e-06)
bones/11/rotation = Quaternion(-0.0363689, -0.130227, 0.140404, 0.980819)
bones/12/position = Vector3(-0.597371, 3.24571, 8.88436e-07)
bones/12/rotation = Quaternion(0.0473297, 0.0227629, -0.14056, 0.988678)
bones/13/position = Vector3(0.010611, 2.24793, 2.36875e-06)
bones/13/rotation = Quaternion(0.0690196, 0.00836928, -0.0275908, 0.997199)
bones/14/position = Vector3(0.586757, 1.60805, -5.57206e-06)
bones/15/position = Vector3(-5.33033e-07, 5.96599, -7.84715e-07)
bones/15/rotation = Quaternion(0.20721, -0.0219862, -0.111948, 0.971622)
bones/16/position = Vector3(-0.0401235, 3.81909, 8.21827e-06)
bones/16/rotation = Quaternion(0.489436, 0.00364235, -0.035354, 0.871315)
bones/17/position = Vector3(0.0344787, 1.87737, -9.58878e-06)
bones/17/rotation = Quaternion(-0.00321072, -0.00259797, -0.0169935, 0.999847)
bones/18/position = Vector3(0.00564547, 2.05718, 3.30753e-06)
bones/19/position = Vector3(-4.06175, 9.39014, -0.0848554)
bones/19/rotation = Quaternion(0.61227, -0.402434, 0.522935, 0.435559)
bones/20/position = Vector3(-3.80368e-07, 8.45856, 1.12048e-06)
bones/20/rotation = Quaternion(0.474995, -0.123016, -0.127198, 0.862014)
bones/21/position = Vector3(-4.83168e-07, 20.6769, 6.97872e-07)
bones/21/rotation = Quaternion(-0.0211206, -0.0097719, -0.224497, 0.974197)
bones/22/position = Vector3(-6.72013e-07, 17.9718, -3.17508e-06)
bones/22/rotation = Quaternion(0.0149291, -0.0427533, 0.111962, 0.99268)
bones/23/position = Vector3(2.97907, 3.21409, 2.37785e-06)
bones/23/rotation = Quaternion(-0.00788667, 0.0249683, -0.0972127, 0.994919)
bones/24/position = Vector3(0.615682, 3.45143, -8.7615e-06)
bones/24/rotation = Quaternion(0.0867476, -0.0572521, 0.0358551, 0.993937)
bones/25/position = Vector3(-0.102859, 2.07161, 1.09898e-05)
bones/25/rotation = Quaternion(-0.00562918, -0.014096, 0.00612668, 0.999866)
bones/26/position = Vector3(-0.512836, 1.28946, -4.23526e-06)
bones/27/position = Vector3(-1.88854e-07, 6.19373, 4.04219e-06)
bones/27/rotation = Quaternion(0.177471, 0.00284774, 0.0926968, 0.979747)
bones/28/position = Vector3(0.0101762, 3.44529, -1.44274e-05)
bones/28/rotation = Quaternion(0.453351, -0.00246634, 0.0375054, 0.890539)
bones/29/position = Vector3(-0.0163659, 2.01669, 1.80628e-05)
bones/29/rotation = Quaternion(-0.0608665, 0.000874427, 0.00816197, 0.998112)
bones/30/position = Vector3(0.00619192, 2.10688, -8.07888e-06)
bones/31/position = Vector3(5.81758, -3.89321, -1.2225)
bones/31/rotation = Quaternion(0.0489059, 0.105833, 0.989385, -0.0867458)
bones/32/position = Vector3(-1.3313e-06, 29.682, -2.74319e-07)
bones/32/rotation = Quaternion(-0.239374, -0.0642664, 0.018886, 0.968614)
bones/33/position = Vector3(8.00859e-07, 26.5345, -1.03814e-07)
bones/33/rotation = Quaternion(0.597019, -0.0027175, -0.0951796, 0.796556)
bones/34/position = Vector3(9.89453e-07, 9.35281, -5.32109e-06)
bones/34/rotation = Quaternion(0.231865, -0.0628417, 0.0132436, 0.970626)
bones/35/position = Vector3(6.09085e-07, 3.82392, 1.96695e-07)
bones/36/position = Vector3(-5.81758, -3.8932, -1.21036)
bones/36/rotation = Quaternion(-0.105701, 0.113997, 0.987427, 0.0286214)
bones/37/position = Vector3(8.65777e-07, 29.6777, 1.58873e-07)
bones/37/rotation = Quaternion(-0.262019, 0.058376, -0.00996045, 0.963244)
bones/38/position = Vector3(-1.05811e-06, 26.5331, 1.509e-06)
bones/38/rotation = Quaternion(0.639465, 0.044715, -0.0225949, 0.767186)
bones/39/position = Vector3(-6.03051e-07, 9.32334, 3.14765e-06)
bones/39/rotation = Quaternion(0.22346, 0.0612395, -0.0140323, 0.972686)
bones/40/position = Vector3(5.39422e-07, 3.81652, 5.82263e-07)

[node name="CamRoot" type="Node3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
script = ExtResource("3_0ipbm")
player = NodePath("..")

[node name="CamYaw" type="Node3D" parent="CamRoot"]

[node name="CamPitch" type="Node3D" parent="CamRoot/CamYaw"]
transform = Transform3D(1, 0, 0, 0, 0.949425, -0.313992, 0, 0.313992, 0.949425, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CamRoot/CamYaw/CamPitch"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_l5upd")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CamRoot/CamYaw/CamPitch/SpringArm3D"]
transform = Transform3D(1, 3.72529e-09, 0, -3.72529e-09, 1, 7.94093e-23, 0, -7.94093e-23, 1, 0, 0, 2.5)
current = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_l5upd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="changed_aiming" from="." to="AnimationController" method="_aiming"]
[connection signal="changed_movement_direction" from="." to="MovementController" method="_on_set_movement_direction"]
[connection signal="changed_movement_state" from="." to="MovementController" method="_on_set_movement_state"]
[connection signal="changed_movement_state" from="." to="AnimationController" method="_on_set_movement_state"]
[connection signal="changed_movement_state" from="." to="CamRoot" method="_on_set_movement_state"]
[connection signal="pressed_jump" from="." to="MovementController" method="_jump"]
[connection signal="punch" from="." to="AnimationController" method="_punch"]
[connection signal="set_cam_rotation" from="CamRoot" to="MovementController" method="_on_set_cam_rotation"]

[editable path="MeshRoot/animated_monkey_man_trimmed"]
